--- a/src/components/MealCategory.css
+++ b/src/components/MealCategory.css
@@ -65,6 +65,9 @@
   background-size: 110%;
  
  }
+ .allBtn p{
+  margin-right: 20px;
+ }
 
 .allBtn {
 
